2012-05-31 Christoph Redl   <redl@kr.tuwien.ac.at>

	* UnfoundedSetChecker.cpp: Split program for UFS checking into
	strongly connected components;
	Implement "negative external learning" for UFS check
	* UnfoundedSetChecker.h: Likewise
	* GenuineGuessAndCheckModelGenerator.cpp: Likewise
	* GenuineGuessAndCheckModelGenerator.h: Likewise
	* AnnotatedGroundProgram.cpp: Group meta information about
	ground programs (head-cyles, e-cycles,
	mapping of auxes to EAs, etc.) in class AnnotatedGroundProgram
	* AnnotatedGroundProgram.h: Likewise

2012-05-18 Christoph Redl   <redl@kr.tuwien.ac.at>

	* EvalHeuristicGreedy.cpp: Add heuristic optimized for being
	used with EBL and UFL
	* EvalHeuristicGreedy.h: Likewise
	* ComponentGraph.cpp: Add ComponentInfo property "fixedDomain"
	* ComponentGraph.h: Likewise

2012-05-18 Christoph Redl   <redl@kr.tuwien.ac.at>

	* PluginInterface.cpp Add nogood generalization
	* PluginInterface.h Likewise
	* GenuineGuessAndCheckModelGenerator.cpp Likewise
	* GenuineGuessAndCheckModelGenerator.h Likewise

2012-05-09  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/State.cpp: Reimplemented -filter option (closes #59).
	* src/AnswerSetPrinterCallback.cpp: Likewise.
	* include/dlvhex2/AnswerSetPrinterCallback.h: Likewise.

2012-05-05 Christoph Redl   <redl@kr.tuwien.ac.at>

	* src/Nogood.cpp: Likewise
	* include/dlvhex2/Nogood.h: New print methods
	* src/UnfoundedSetChecker.cpp: Nogood exchange
	between UFS detection and main search
	* include/dlvhex2/UnfoundedSetChecker.h: Likewise
	* include/dlvhex2/FLPModelGeneratorBase.tcc: small changes

2012-04-28 Christoph Redl   <redl@kr.tuwien.ac.at>

	* dlvhex.cpp: Remove option "--mincheck"
	* GuessAndCheckModelGenerator.cpp: Likewise.
	* GuessAndCheckModelGenerator.h: Likewise
	* GenuineGuessAndCheckModelGenerator.cpp: Likewise;
	Implement a framework for external atom evaluation heuristics
	and UFS check heuristics.
	* GenuineGuessAndCheckModelGenerator.h: Likewise
