@@ -92,6 +92,8 @@ struct ID:
 	static const IDKind PROPERTY_AUX             = 0x00800000;
 	static const IDKind PROPERTY_EXTERNALAUX     = 0x00400000;	// used for auxiliaries which represent external atoms
 									// (the genuine solver needs to distinct them from other auxiliaries like HO-, strong negation-replacements and EA-input)
+	static const IDKind PROPERTY_EXTERNALINPUTAUX= 0x00200000;	// used for auxiliaries which represent aux input to external atoms
+									// (the genuine solver needs to distinct them from other auxiliaries like HO-, strong negation-replacements and EA-input)
 
   // for builtin terms, this is the address part (no table)
   // beware: must be synchronized with isInfixBuiltin() and builtinTerms[]
@@ -159,6 +161,7 @@ struct ID:
 	inline bool isNaf() const           { return (kind & NAF_MASK) == NAF_MASK; }
 	inline bool isAuxiliary() const     { return (kind & PROPERTY_AUX) == PROPERTY_AUX; }
 	inline bool isExternalAuxiliary() const     { return (kind & PROPERTY_EXTERNALAUX) == PROPERTY_EXTERNALAUX; }
+	inline bool isExternalInputAuxiliary() const     { return (kind & PROPERTY_EXTERNALINPUTAUX) == PROPERTY_EXTERNALINPUTAUX; }
   
 	inline bool isRule() const          { return (kind & MAINKIND_MASK) == MAINKIND_RULE; }
 	inline bool isRegularRule() const   { assert(isRule()); return (kind & SUBKIND_MASK) == SUBKIND_RULE_REGULAR; }
