@@ -67,6 +67,8 @@ struct Rule:
       { assert(ID(kind,0).isRule()); }
   inline bool isEAGuessingRule() const
     { return head.size() == 2 && head[0].isExternalAuxiliary() && head[1].isExternalAuxiliary(); }
+  inline bool isEAAuxInputRule() const
+    { return head.size() == 1 && head[0].isExternalInputAuxiliary(); }
   std::ostream& print(std::ostream& o) const
     { o << "Rule(" << printvector(head) << " <- " << printvector(body);
       if( weight != ID_FAIL || level != ID_FAIL )
