@@ -288,6 +288,7 @@ void GringoGrounder::GroundHexProgramBuilder::printSymbolTableEntry(const AtomRe
 				assert(!id.isVariableTerm());
 				if( id.isAuxiliary() ) ogatom.kind |= ID::PROPERTY_AUX;
 				if( id.isExternalAuxiliary() ) ogatom.kind |= ID::PROPERTY_EXTERNALAUX;
+				if( id.isExternalInputAuxiliary() ) ogatom.kind |= ID::PROPERTY_EXTERNALINPUTAUX;
 				ogatom.tuple.push_back(id);
 			}
 		}
